--- a/my-phaser-app/package.json
+++ b/my-phaser-app/package.json
@@ -9,16 +9,21 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.2",
+    "@splinetool/loader": "^1.12.6",
     "@splinetool/react-spline": "^4.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.555.0",
     "next": "16.0.7",
     "phaser": "^3.90.0",
     "radix-ui": "^1.4.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "three": "^0.159.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
