--- a/my-phaser-app/package.json
+++ b/my-phaser-app/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@material-ui/styles": "^4.11.5",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.2",
     "@splinetool/loader": "^1.12.6",
@@ -22,6 +23,7 @@
     "radix-ui": "^1.4.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-spring": "^10.0.3",
     "tailwind-merge": "^3.4.0",
     "three": "^0.159.0"
   },
