--- a/my-phaser-app/package.json
+++ b/my-phaser-app/package.json
@@ -15,6 +15,7 @@
     "@react-three/fiber": "^9.4.2",
     "@splinetool/loader": "^1.12.6",
     "@splinetool/react-spline": "^4.1.0",
+    "@splinetool/runtime": "^1.12.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "gsap": "^3.13.0",
