--- a/my-phaser-app/package.json
+++ b/my-phaser-app/package.json
@@ -33,7 +33,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "17.0.0",
-    "@types/react-dom": "^19",
+    "@types/react-dom": "17.0.2",
     "eslint": "^9",
     "eslint-config-next": "16.0.7",
     "tailwindcss": "^4",
