--- a/my-phaser-app/package.json
+++ b/my-phaser-app/package.json
@@ -39,5 +39,9 @@
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
+  },
+  "compilerOptions": {
+    "lib": ["dom", "dom.iterable", "es6"],
+    "types": ["node"]
   }
 }
